// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupsApi > acceptGroupJoin 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "entry": {
                "ask": {
                  "a-ask": "approve",
                  "ships": [
                    "~bus",
                    "~ten",
                  ],
                },
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > addChannelListingToGroup 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "channel": {
                "a-channel": {
                  "add": {
                    "added": 1767225600000,
                    "join": false,
                    "meta": {
                      "cover": "c",
                      "description": "d",
                      "image": "i",
                      "title": "t",
                    },
                    "readers": [],
                    "section": "default",
                  },
                },
                "nest": "chat/~zod/test-channel",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > addChannelListingToGroup with readers and join 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "channel": {
                "a-channel": {
                  "add": {
                    "added": 1767225600000,
                    "join": true,
                    "meta": {
                      "cover": "c",
                      "description": "d",
                      "image": "i",
                      "title": "t",
                    },
                    "readers": [
                      "admin",
                    ],
                    "section": "default",
                  },
                },
                "nest": "chat/~zod/test-channel",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > addChannelToGroup 1`] = `
{
  "trackedPoke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "channel": {
                "a-channel": {
                  "section": "default",
                },
                "nest": "chat/~zod/test-channel",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
      {
        "tag": "addChannelToGroup",
      },
    ],
  ],
}
`;

exports[`groupsApi > addChannelToNavSection 1`] = `
{
  "trackedPoke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "channel": {
                "a-channel": {
                  "section": "section-1",
                },
                "nest": "chat/~zod/test-channel",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
      {
        "tag": "addChannelToNavSection",
      },
    ],
  ],
}
`;

exports[`groupsApi > addGroupRole 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "role": {
                "a-role": {
                  "add": {
                    "cover": "",
                    "description": "",
                    "image": "",
                    "title": "A",
                  },
                },
                "roles": [
                  "admin",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > addMembersToRole 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "seat": {
                "a-seat": {
                  "add-roles": [
                    "admin",
                  ],
                },
                "ships": [
                  "~bus",
                  "~ten",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > addNavSection 1`] = `
{
  "trackedPoke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "section": {
                "a-section": {
                  "add": {
                    "cover": "cover",
                    "description": "about",
                    "image": "icon",
                    "title": "Section",
                  },
                },
                "section-id": "section-1",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
      {
        "tag": "addNavSection",
      },
    ],
  ],
}
`;

exports[`groupsApi > banUsersFromGroup 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "entry": {
                "ban": {
                  "add-ships": [
                    "~bus",
                    "~ten",
                  ],
                },
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > cancelGroupJoin 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": "~zod/test-group",
        "mark": "group-cancel",
      },
    ],
  ],
}
`;

exports[`groupsApi > createGroup 1`] = `
{
  "thread": [
    [
      {
        "body": {
          "channels": [
            {
              "channelId": "chat/~zod/test-channel",
              "meta": {
                "cover": "",
                "description": "desc",
                "image": "",
                "title": "Channel",
              },
            },
          ],
          "groupId": "~zod/test-group",
          "guestList": [
            "~bus",
            "~ten",
          ],
          "meta": {
            "cover": "",
            "description": "",
            "image": "icon",
            "title": "Title",
          },
        },
        "desk": "groups",
        "inputMark": "group-create-thread",
        "outputMark": "group-ui-2",
        "threadName": "group-create-1",
      },
    ],
  ],
}
`;

exports[`groupsApi > createGroup recovers a lost response via scry 1`] = `
{
  "scry": [
    [
      {
        "app": "groups",
        "path": "/v3/ui/groups/~zod/test-group",
      },
    ],
  ],
  "thread": [
    [
      {
        "body": {
          "channels": [
            {
              "channelId": "chat/~zod/test-channel",
              "meta": {
                "cover": "",
                "description": "desc",
                "image": "",
                "title": "Channel",
              },
            },
          ],
          "groupId": "~zod/test-group",
          "guestList": [],
          "meta": {
            "cover": "",
            "description": "",
            "image": "icon",
            "title": "undefined⁠",
          },
        },
        "desk": "groups",
        "inputMark": "group-create-thread",
        "outputMark": "group-ui-2",
        "threadName": "group-create-1",
      },
    ],
  ],
}
`;

exports[`groupsApi > deleteChannel 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "channel": {
                "a-channel": {
                  "del": null,
                },
                "nest": "chat/~zod/test-channel",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > deleteGroup 1`] = `
{
  "trackedPoke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "delete": null,
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
      {
        "tag": "deleteGroup",
      },
    ],
  ],
}
`;

exports[`groupsApi > deleteGroupRole 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "role": {
                "a-role": {
                  "del": null,
                },
                "roles": [
                  "admin",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > deleteNavSection 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "section": {
                "a-section": {
                  "del": null,
                },
                "section-id": "section-1",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > findGroupsHostedBy 1`] = `
{
  "subscribeOnce": [
    [
      {
        "app": "groups",
        "path": "/gangs/index/~zod",
      },
      30000,
      undefined,
      {
        "tag": "findGroupsHostedBy",
      },
    ],
  ],
}
`;

exports[`groupsApi > getChannelPreview 1`] = `
{
  "subscribeOnce": [
    [
      {
        "app": "groups",
        "path": "/chan/chat/~zod/test-channel",
      },
      undefined,
      undefined,
      {
        "tag": "getChannelPreview",
      },
    ],
  ],
}
`;

exports[`groupsApi > getGroup 1`] = `
{
  "scry": [
    [
      {
        "app": "groups",
        "path": "/v3/ui/groups/~zod/test-group",
      },
    ],
  ],
}
`;

exports[`groupsApi > getGroupPreview 1`] = `
{
  "subscribeOnce": [
    [
      {
        "app": "groups",
        "path": "/gangs/~zod/test-group/preview",
      },
      undefined,
      undefined,
      {
        "tag": "getGroupPreview",
      },
    ],
  ],
}
`;

exports[`groupsApi > getGroups 1`] = `
{
  "scry": [
    [
      {
        "app": "groups",
        "path": "/v3/groups",
      },
    ],
  ],
}
`;

exports[`groupsApi > getPinnedItems 1`] = `
{
  "scry": [
    [
      {
        "app": "groups-ui",
        "path": "/pins",
      },
    ],
  ],
}
`;

exports[`groupsApi > inviteGroupMembers 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "invite": {
            "a-invite": {
              "note": null,
              "token": null,
            },
            "flag": "~zod/test-group",
            "ships": [
              "~bus",
              "~ten",
            ],
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > joinGroup 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "flag": "~zod/test-group",
          "join-all": true,
        },
        "mark": "group-join",
      },
    ],
  ],
}
`;

exports[`groupsApi > kickUsersFromGroup 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "seat": {
                "a-seat": {
                  "del": null,
                },
                "ships": [
                  "~bus",
                  "~ten",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > leaveGroup 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": "~zod/test-group",
        "mark": "group-leave",
      },
    ],
  ],
}
`;

exports[`groupsApi > pinItem 1`] = `
{
  "poke": [
    [
      {
        "app": "groups-ui",
        "json": {
          "pins": {
            "add": "chat/~zod/test-channel",
          },
        },
        "mark": "ui-action",
      },
    ],
  ],
}
`;

exports[`groupsApi > rejectGroupInvitation 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": "~zod/test-group",
        "mark": "invite-decline",
      },
    ],
  ],
}
`;

exports[`groupsApi > rejectGroupJoin 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "entry": {
                "ask": {
                  "a-ask": "deny",
                  "ships": [
                    "~bus",
                    "~ten",
                  ],
                },
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > removeAllRolesFromMembers 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "seat": {
                "a-seat": {
                  "del-roles": [
                    "admin",
                    "member",
                  ],
                },
                "ships": [
                  "~bus",
                  "~ten",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > removeMembersFromRole 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "seat": {
                "a-seat": {
                  "del-roles": [
                    "admin",
                  ],
                },
                "ships": [
                  "~bus",
                  "~ten",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > requestGroupInvitation 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": "~zod/test-group",
        "mark": "group-knock",
      },
    ],
  ],
}
`;

exports[`groupsApi > rescindGroupInvitationRequest 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": "~zod/test-group",
        "mark": "group-rescind",
      },
    ],
  ],
}
`;

exports[`groupsApi > revokeGroupMemberInvites 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "entry": {
                "pending": {
                  "a-pending": {
                    "del": null,
                  },
                  "ships": [
                    "~bus",
                    "~ten",
                  ],
                },
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > setPinnedItemOrder 1`] = `
{
  "poke": [
    [
      {
        "app": "groups-ui",
        "json": {
          "pins": {
            "set-order": [
              "~zod/test-group",
              "chat/~zod/test-channel",
            ],
          },
        },
        "mark": "ui-action",
      },
    ],
  ],
}
`;

exports[`groupsApi > subscribeGroups 1`] = `
{
  "subscribe": [
    [
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
    ],
    [
      {
        "app": "groups",
        "path": "/v1/foreigns",
      },
      [Function],
    ],
  ],
}
`;

exports[`groupsApi > unbanUsersFromGroup 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "entry": {
                "ban": {
                  "del-ships": [
                    "~bus",
                    "~ten",
                  ],
                },
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > unpinItem 1`] = `
{
  "poke": [
    [
      {
        "app": "groups-ui",
        "json": {
          "pins": {
            "del": "~zod/test-group",
          },
        },
        "mark": "ui-action",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateChannel 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "channel": {
                "a-channel": {
                  "edit": {
                    "added": 1,
                    "join": false,
                    "meta": {
                      "cover": "c",
                      "description": "d",
                      "image": "i",
                      "title": "t",
                    },
                    "readers": [],
                    "section": "default",
                  },
                },
                "nest": "chat/~zod/test-channel",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateGroupBlob 1`] = `
{
  "trackedPoke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "blob": "{"a":1}",
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
      {
        "tag": "updateGroupBlob",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateGroupMeta 1`] = `
{
  "trackedPoke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "meta": {
                "cover": "c",
                "description": "d",
                "image": "i",
                "title": "t",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
      {
        "app": "groups",
        "path": "/v3/groups",
      },
      [Function],
      {
        "tag": "updateGroupMeta",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateGroupNavigation 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "navigation": {
                "order": [
                  "section-1",
                  "second",
                ],
                "sections": {
                  "second": {
                    "meta": {
                      "cover": "cover",
                      "description": "about",
                      "image": "icon",
                      "title": "Section",
                    },
                    "order": [
                      "chat/~zod/a",
                      "chat/~zod/b",
                    ],
                  },
                  "section-1": {
                    "meta": {
                      "cover": "cover",
                      "description": "about",
                      "image": "icon",
                      "title": "Section",
                    },
                    "order": [
                      "chat/~zod/a",
                      "chat/~zod/b",
                    ],
                  },
                },
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateGroupPrivacy 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "entry": {
                "privacy": "secret",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateGroupRole 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "role": {
                "a-role": {
                  "edit": {
                    "cover": "",
                    "description": "B",
                    "image": "",
                    "title": "A",
                  },
                },
                "roles": [
                  "admin",
                ],
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;

exports[`groupsApi > updateNavSection 1`] = `
{
  "poke": [
    [
      {
        "app": "groups",
        "json": {
          "group": {
            "a-group": {
              "section": {
                "a-section": {
                  "edit": {
                    "cover": "cover",
                    "description": "about",
                    "image": "icon",
                    "title": "Section",
                  },
                },
                "section-id": "section-1",
              },
            },
            "flag": "~zod/test-group",
          },
        },
        "mark": "group-action-5",
      },
    ],
  ],
}
`;
